--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   background: #f9e933;
+  font-family: 'Droid Sans', sans-serif;
 }
 
 
@@ -10,7 +11,12 @@ header, main, footer {
 header .container, main .container, footer .container {
   max-width: 855px;
   margin: auto;
+
 }  
+
+h1, h2, h3, h4 {
+  font-family: 'Ubuntu', sans-serif;
+}
 
 header {
   background: white;
