--- a/style.css
+++ b/style.css
@@ -12,8 +12,16 @@ header, main, footer {
 header .container, main .container, footer .container {
   max-width: 855px;
   margin: auto;
-
 }  
+
+a {
+  color: blue;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
 
 h1, h2, h3, h4 {
   font-family: 'Ubuntu', sans-serif;
@@ -31,6 +39,7 @@ h1 {
   width: 570px;
   font-size: xx-large;
   font-style: italic;
+  color: red;
 }
 
 header nav {
@@ -54,10 +63,12 @@ main {
 
 h2 {
   font-size: x-large;
+  color: red;
 }
 
 h3 {
   font-size: larger;
+  color: red;
 }
 
 .lightbulb {
@@ -75,7 +86,6 @@ h4 {
   font-size: large;
   padding-top: 10px;
   padding-bottom: 10px;
-  font-weight: bold;
 }
 
 .sitemap {
