--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ h1, h2, h3, h4 {
 header {
   background: white;
   overflow: hidden;
-  padding-top:10px;
+  padding-top:30px;
   padding-bottom: 30px;
 }
 
@@ -50,6 +50,7 @@ header nav {
 main {
   background: white;
   overflow: hidden;
+  height: 550px;
 }
 
 .info {
@@ -59,6 +60,7 @@ main {
 .maintext {
   float: left;
   width: 570px;
+  margin-top: 70px;
 }
 
 h2 {
@@ -75,6 +77,7 @@ h3 {
   float: right;
   width: 285px;
   padding-bottom: 15px;
+  margin-top: 100px;
 }
 
 .contact {
