--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -53,32 +53,16 @@ main {
   height: 550px;
 }
 
-.info {
-  margin-bottom: 30px;
+.tabs a span {
+  display: inline-block;
+    border-radius: 5px 5px 0 0;
+    width: 100px;
+    margin-right: 10px;
+    text-align: center;
+    background: #999;
+    padding: 5px;
 }
 
-.maintext {
-  float: left;
-  width: 570px;
-  margin-top: 70px;
-}
-
-h2 {
-  font-size: x-large;
-  color: red;
-}
-
-h3 {
-  font-size: larger;
-  color: red;
-}
-
-.lightbulb {
-  float: right;
-  width: 285px;
-  padding-bottom: 15px;
-  margin-top: 100px;
-}
 
 .contact {
   float: left;
