--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -63,6 +63,16 @@ main {
     padding: 5px;
 }
 
+main li {
+  border: 25px;
+  margin-bottom: 5px;
+  background: gainsboro;
+}
+
+main .content {
+  background: #999;
+  padding: 5px;
+}
 
 .contact {
   float: left;
